# tadc-sbm

./: .gitignore  README.md  environment.yml  notebook.ipynb  pyproject.toml  requirements.txt  tadc-sbm.py
tadcsbm/: __init__.py  main.py  tadcsbm_simulator.py  utils.py
