[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tadc-sbm"
version = "0.1.1"
description = "Python package to build and manipulate dynamic NetworkX graphs."
requires-python = ">=3.7"
readme = {file = "README.md", content-type = "text/markdown"}
# license = "BSD-2-Clause"
# license-files = ["LICENSE.md"]
keywords = ["Network", "Graph", "Dynamic Graph", "Temporal Network"]
authors = [
    {name = "Nelson Aloysio Reis de Almeida Passos", email = "nelson.reis@phd.unipi.it"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # "graph-tool=2.96",  # conda install -c conda-forge graph-tool
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "networkx-temporal>=1.2.1",
    "numpy==1.26.4",
    "pandas==2.2.3",
]

[project.urls]
Homepage = "https://pypi.org/p/tadc-sbm/"
Repository = "https://github.com/nelsonaloysio/tadc-sbm"
Issues = "https://github.com/nelsonaloysio/tadc-sbm/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tadcsbm*"]
exclude = ["tadcsbm.tests*"]

[project.scripts]
tadc-sbm = "tadcsbm.main:main"