[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tadc-sbm"
version = "0.1.6"
description = "A Time-varying, Attributed, Degree-Corrected Stochastic Block Model"
requires-python = ">=3.7"
readme = {file = "README.md", content-type = "text/markdown"}
# license = "Apache Software License 2.0"
# license-files = ["LICENSE.md"]
authors = [
    {name = "Nelson Aloysio Reis de Almeida Passos", email = "nelson.reis@phd.unipi.it"}
]
keywords = ["Temporal Network", "Attributed Graph", "Graph Generative Model", "Graph Sampling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # "graph-tool=2.96",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "networkx-temporal>=1.2.1",
    "numpy==1.26.4",
    "pandas==2.2.3",
]

[project.urls]
Homepage = "https://pypi.org/p/tadc-sbm/"
Repository = "https://github.com/nelsonaloysio/tadc-sbm"
Issues = "https://github.com/nelsonaloysio/tadc-sbm/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tadcsbm*"]
exclude = ["tadcsbm.tests*"]

[project.scripts]
tadc-sbm = "tadcsbm.main:main"
